--- a/ilp_react/package.json
+++ b/ilp_react/package.json
@@ -9,11 +9,12 @@
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-data-table-component": "^3.5.0",
-    "react-datepicker": "^2.9.6",
+    "react-date-picker": "^7.8.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
-    "react-toastify": "^5.3.2"
+    "react-toastify": "^5.3.2",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
