--- a/ilp_react/package.json
+++ b/ilp_react/package.json
@@ -8,10 +8,12 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-confirm-alert": "^2.4.1",
     "react-date-picker": "^7.8.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "react-table": "^6.10.3",
     "react-toastify": "^5.3.2",
     "styled-components": "^4.4.0"
   },
